--- a/src/application-container.scss
+++ b/src/application-container.scss
@@ -2,7 +2,7 @@
   position: fixed;
   height: 100%;
   width: 100%;
-  display: flex;
+  overflow-y: auto;
 }
 
 .applicationContainer__content {
@@ -10,6 +10,8 @@
   display: flex;
   padding: 60px 20px;
   box-sizing: border-box;
+  width: 500px;
+  margin: 0 auto;
 }
 
 .searchForm {
@@ -17,7 +19,7 @@
   transition: all 300ms cubic-bezier(0.65, 0.05, 0.36, 1);
   width: 100%;
   top: 50%;
-  margin-top: -75px;
+  margin-top: 100px;
 }
 
 .searchForm--pinned {
