--- a/src/components/search-input/search-input.scss
+++ b/src/components/search-input/search-input.scss
@@ -1,3 +1,23 @@
 .searchInput {
   display: inline-flex;
+  align-items: center;
+  width: 100%;
+  background: #fff;
+  padding: 15px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
+.searchInput__icon {
+  margin-right: 10px;
+}
+
+.searchInput__editor {
+  flex: 1;
+  border: 0;
+  background-color: transparent;
+  font-size: 1.5rem;
+  &:focus {
+    outline: 0;
+  }
 }
