--- a/src/components/artist-profile/artist-event.scss
+++ b/src/components/artist-profile/artist-event.scss
@@ -1,15 +1,21 @@
 .artistEvent {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F9F9FB;
-  padding: 8px 0;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #f9f9fb;
+  padding: 15px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #E4E7EB;
+  }
 }
 
 .artistEvent__date {
   width: 30px;
   display: flex;
   flex-direction: column;
-  color: #1070CA;
+  color: #1070ca;
   margin-right: 10px;
 }
 
@@ -25,4 +31,12 @@
   display: flex;
   justify-content: space-between;
   flex: 1;
+}
+
+.artistEvent__venueMap {
+  margin-top: 15px;
+  padding: 8px 0;
+  width: 100%;
+  height: 300px;
+  border-top: 1px solid #f9f9fb;
 }
