add env variables, format code, update readme

--- a/src/components/artist-profile/artist-event.scss
+++ b/src/components/artist-profile/artist-event.scss
@@ -5,10 +5,13 @@
   border-bottom: 1px solid #f9f9fb;
   padding: 15px;
   cursor: pointer;
-
   &:hover {
     background-color: #E4E7EB;
   }
+}
+
+.artistEvent--visible-map {
+  background-color: #E4E7EB;
 }
 
 .artistEvent__date {
