--- a/src/components/search-input/search-input.scss
+++ b/src/components/search-input/search-input.scss
@@ -6,6 +6,7 @@
   padding: 15px;
   margin-bottom: 20px;
   box-sizing: border-box;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 
 .searchInput__icon {
