--- a/src/components/artist-profile/artist-profile.scss
+++ b/src/components/artist-profile/artist-profile.scss
@@ -1,12 +1,13 @@
 .artistProfile__details {
   background-color: #fff;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding-bottom: 8px;
 }
 
 .artistProfile__image {
   padding: 15px;
   & img {
-    width: 100%
+    width: 100%;
   }
 }
 
@@ -35,4 +36,5 @@
 
 .eventsList {
   background: #fff;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
