--- a/src/application-container.scss
+++ b/src/application-container.scss
@@ -16,7 +16,7 @@
 
 .searchForm {
   position: absolute;
-  transition: all 300ms cubic-bezier(0.65, 0.05, 0.36, 1);
+  transition: all 300ms ease-out;
   width: 100%;
   top: 50%;
   margin-top: 100px;
